--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -16,8 +16,8 @@
         border-radius: 0 6px 6px 0;
         bottom: auto;
         box-shadow: 0px 0px 0px 6px rgba($mono0, 0.25);
-        left: auto;
-        right: 0;
+        left: 0;
+        right: auto;
         top: 50%;
         transform: translate3d(-1px, -62%, 0);
         transition: none;
@@ -95,7 +95,7 @@
         display: block;
     }
     &:before {
-        font-family: 'icons';
+        @include icon;
     }
     &--web:before {
         content: $icon-screen;
@@ -122,9 +122,9 @@
         display: none;
     }
     &:after {
+        @include icon;
         content: $icon-arrow;
         display: block;
-        font-family: 'icons';
         font-size: 1rem;
         transition: transform $trans-speed2;
     }
